sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.error
AlgCocktailSort1:13: error: not found: value tri
      tri=false
      ^AlgCocktailSort1:23: error: not found: value tri
      tri=false
      ^